kubernetes/nextcloud/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: mariadb
          image: mariadb:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: nextcloud-db
              mountPath: /var/lib/mysql
      volumes:
        - name: nextcloud-db
          persistentVolumeClaim:
            claimName: nextcloud-db
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
spec:
  selector:
    app: nextcloud.db
  ports:
    - name: mariadb
      port: 3306
      protocol: TCP
      targetPort: 3306
