kubernetes/nextcloud/99-minikube-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: nextcloud
spec:
  rules:
    - host: cloud.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port: 
                  number: 443
